--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -62,6 +62,7 @@ en:
       title: "Answer"
     search: "Search"
     user_nil: "User not exists"
+
     update_user:
       title: "Edit user"
       title_edit: "Update your profile"
@@ -72,6 +73,23 @@ en:
       save_change: "Save changes"
     messages:
       notice: "You are sure?"
-  datetime:
-    formats:
-      default: "%a, %d %b %Y %H:%M:%S"
+    datetime:
+      formats:
+        default: "%a, %d %b %Y %H:%M:%S"
+
+    category:
+      create_category_success: "Create category success"
+      check_category_nil: "Category not exists"
+      title: "Category"
+      add_category: "Add Category"
+
+    admin:
+      users:
+        delete_success: "Delete success"
+        delete_fail: "Delete fail"
+        title: "All users"
+        placeholder_search: "search by name or email"
+        tr_STT: "STT"
+        tr_name: "Name"
+        tr: "Email"
+        btn_submit: "submit"
