admin-update-category

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -91,7 +91,14 @@ en:
       categories:
         submit_create_new_category: "Create Category"
         create_category_success: "Create category success"
-        delete_category_success: "Delete category success"
-        delete_category_fail: "Delete category fail"
-        title: "Create new category"
-        title_page: "New Category"
+        flash_delete_success: "Delete category success"
+        flash_delete_fail: "Delete category fail"
+        title_create: "Create new category"
+        title_page_create: "New Category"
+        link_delete: "Delete"
+        link_edit: "Edit"
+        update_success: "Update success"
+        update_fail: "Update fail"
+        submit_update_category: "Update category"
+        title_update: "Update category"
+        title_page_update: "Update category"
