user-follow-unfollow

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,6 +3,11 @@ en:
       formats:
         default: "%a, %d %b %Y %H:%M:%S"
   page:
+    home_tt: "WELCOME TO FRAMGIA"
+    home_elearning: "E-LEARNING"
+    fan_page_facebook: "Facebook Framgia"
+    link_recruit: "http://recruit.framgia.vn/"
+    link_face: "https://www.facebook.com/FramgiaVietnam/?fref=ts"
     framgia_system: "E-Learning System"
     framgia_link: "recruit.framgia.vn/"
     framgia: "Framgia VN"
@@ -22,6 +27,8 @@ en:
     home:
       title: "Home"
       description: "This is the home page for the Ruby on Rails Tutorial Framgia E-Learning System sample application."
+      signup: "Sign up"
+      signin: "Sign in"
     help:
       title: "Help"
       description: "To get help on this app, send email to: bui.van.duong@framgia.com."
@@ -43,6 +50,7 @@ en:
       signin: "Sign in"
       sign_up_successful: "Sign up successful. Please login to participate!"
       error: "The form contains "
+      password: "Password (6 characters minimum)"
       confirmation: "Confirmation"
     category:
       title: "Category"
@@ -81,21 +89,25 @@ en:
       save_change: "Save changes"
     messages:
       notice: "You are sure?"
+
     admin:
       manager: "Manager"
+      do_lesson: "Do lesson"
       users:
         delete_user_success: "Delete user success"
         delete_user_fail: "Delete user fail"
         delete_confirm: "You sure?"
         title: "All users"
-        placeholder_search: "search by name or email"
-        td_STT: "STT"
+        placeholder_search: "search by name"
+        td_index: "Index"
+        td_Avatar: "Avatar"
         td_avatar: "Avatar"
         td_name: "Name"
         td_email: "Email"
         td_delete: "Delete"
         btn_delete: "Delete"
         submit_search_users: "Search"
+        list_users: "Users"
       categories:
         submit_create_new_category: "Create Category"
         create_category_success: "Create category success"
@@ -110,7 +122,16 @@ en:
         submit_update_category: "Update category"
         title_update: "Update category"
         title_page_update: "Update category"
+        add: "Add category"
+        title: "Manager Categories"
       words:
+        td_index: "Index"
+        td_category: "Category"
+        td_word_content: "Word content"
+        td_view_detail: "View"
+        td_edit_word: "Edit"
+        td_delete_word: "Delete"
+        list_words: "Words"
         title: "Word"
         create: "Create a new words"
         update: "Update word"
@@ -125,7 +146,7 @@ en:
       create_lesson_fail: "Create lessons fail"
       link_create_lesson: "Create lesson"
       not_found_user: "Not found user"
-      not_found_lesson: "Not found lesson"
+      not_found_lesson: "This lesson isn't yours"
       already_submit: "Already submit"
       flash_iscompleted: "You already complete this lesson"
       flash_uncompleted: "Uncompleted this lesson"
@@ -133,25 +154,27 @@ en:
       save_success: "Save the lesson successfully"
       submit_btn: "Submit"
       correct_answer: "Correct answer"
-      incorrect_answer: "Incorrect answer"
+      incorrect_answer: "(F)"
       btn_save: "Save"
       btn_submit: "Submit"
-      confirm_msg: "You sure?"
+      confirm_msg: "Are you sure to finish your exam ?
+        You can't change your answers after you click button OK."
       title_show: "Show"
       show_my_lesson: "My lesson"
       show_my_lesson_msg: "This lesson is created at "
       err_create_lesson: "Number word of category not enough"
+      result: "Results of your lessons :"
 
     users:
       profile:
         td_name: "Name"
         td_email: "Email"
-        title_lesson: "Title lesson"
+        title_lesson: "Lessons learned list"
         td_index: "STT"
-        td_date: "Date"
+        td_date: "Created Date"
         td_status: "Status"
         stt_continue: "Continue"
-        stt_finish: "Finish"
+        stt_finish: "Complete"
         my_profile: "%{user_name}"
         following: "following"
         followers: "followers"
@@ -174,3 +197,4 @@ en:
       unfollow: "unfollow"
       content: "You %{content}"
       activity_lesson_content: "%{content} in %{name}"
+      title_activities: "Activities"
