--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -100,7 +100,7 @@ en:
         delete_user_success: "Delete user success"
         delete_user_fail: "Delete user fail"
         delete_confirm: "You sure?"
-        title: "All users"
+        title: "Manager users"
         placeholder_search: "search by name"
         td_index: "Index"
         td_Avatar: "Avatar"
@@ -171,6 +171,7 @@ en:
 
     users:
       profile:
+        td_Avatar: "Avatar"
         td_name: "Name"
         td_email: "Email"
         title_lesson: "Lessons learned list"
