--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -138,12 +138,17 @@ en:
         list_words: "Words"
         title: "Word"
         create: "Create a new words"
-        update: "Update word"
+        update: " Update"
         add_answer: "Add a new answer"
         create_success: "Create a new word success"
         create_fail: "Create a new word fail"
         create_overflow: "Sorry, answers no more size"
         update_success: "Update word success!"
+        remove_answer: "Remove"
+        link_create_word: "Add"
+        link_update: " Update"
+        link_delete: " Delete"
+        link_detail: " Detail"
 
     lessons:
       create_lesson_success: "Create lessons success"
@@ -174,7 +179,7 @@ en:
         td_Avatar: "Avatar"
         td_name: "Name"
         td_email: "Email"
-        title_lesson: "Lessons learned list"
+        title_lesson: "Lessons list"
         td_index: "STT"
         td_date: "Created Date"
         td_status: "Status"
@@ -184,6 +189,8 @@ en:
         following: "following"
         followers: "followers"
         user_nil: "Not found user"
+        title_activities: "Activities"
+        msg_not_lesson: "You don't have any lessons"
       relationships:
         title_page_follow: "Follow Users"
         msg_destroy: "Destroy success"
